--- a/Bingo.csproj
+++ b/Bingo.csproj
@@ -74,6 +74,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Setup Automatic Winner Checking.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Setup Automatic Winner Checking.Designer.cs">
+      <DependentUpon>Setup Automatic Winner Checking.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Bingo Card Generator.resx">
       <DependentUpon>Bingo Card Generator.cs</DependentUpon>
     </EmbeddedResource>
@@ -92,6 +98,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="Setup Automatic Winner Checking.resx">
+      <DependentUpon>Setup Automatic Winner Checking.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
